subprojects {
    apply plugin: 'java'

    group = 'van.karm'
    version = '1.0.0'
    sourceCompatibility = '21'

    repositories {
        mavenCentral()
    }

}
